// Copyright 2015 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blaze.worker;

option java_package = "com.google.devtools.build.lib.worker";

// This represents a single work unit that Blaze sends to the worker.
message WorkRequest {
  repeated string arguments = 1;
}

// The worker sends this message to Blaze when it finished its work on the WorkRequest message.
message WorkResponse {
  int32 exit_code = 1;
  // This is printed to the user after the WorkResponse has been received and is supposed to contain
  // compiler warnings / errors etc. - thus we'll use a string type here, which gives us UTF-8
  // encoding.
  string output = 2;
}
